--- a/.github/workflows/PublishNuGet.yml
+++ b/.github/workflows/PublishNuGet.yml
@@ -1,25 +1,36 @@
 name: .NET
 
 on:
-  workflow_dispatch:
-    inputs:
-      version:
-        description: The version of the NuGet to publix X.Y.Z. Don't mess it up 😉
-        required: true
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+  BuildNuGet:
+    name: Build NuGet
+    runs-on: windows-latest
     steps:
     - uses: actions/checkout@v3
-    
+
     - name: Setup .NET
       uses: actions/setup-dotnet@v2
       with:
         dotnet-version: 6.0.x
-        
-    - name: Restore dependencies
-      run: dotnet restore
-      
+
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build
+
+    - name: Upload NuGet artifact
+      uses: actions/upload-artifact@v3.0.0
+
+
+
+  PublishNuGetToPrivateFeed:
+    name: Publish NuGet
+    runs-on: windows-latest
+    steps:
+    - name: Download NuGet artifact
+      uses: actions/download-artifact@v3.0.0
+
+
