--- a/.github/workflows/PublishNuGet.yml
+++ b/.github/workflows/PublishNuGet.yml
@@ -19,18 +19,19 @@ jobs:
         dotnet-version: 6.0.x
 
     - name: Build
-      run: dotnet build
+      run: dotnet build --configuration Release DansWpfComponents\DansWpfComponents\DansWpfComponents.csproj
 
-    - name: Upload NuGet artifact
-      uses: actions/upload-artifact@v3.0.0
+#    - name: Upload NuGet artifact
+#      uses: actions/upload-artifact@v3.0.0
 
 
 
-  PublishNuGetToPrivateFeed:
-    name: Publish NuGet
-    runs-on: windows-latest
-    steps:
-    - name: Download NuGet artifact
-      uses: actions/download-artifact@v3.0.0
+#  PublishNuGetToPrivateFeed:
+#    name: Publish NuGet
+#    runs-on: windows-latest
+#    needs: BuildNuGet
+#    steps:
+#    - name: Download NuGet artifact
+#      uses: actions/download-artifact@v3.0.0
 
 
