Should now upload the nuget packages

--- a/.github/workflows/PublishNuGet.yml
+++ b/.github/workflows/PublishNuGet.yml
@@ -21,9 +21,10 @@ jobs:
     - name: Build
       run: dotnet build --configuration Release DansWpfComponents\DansWpfComponents\DansWpfComponents.csproj
 
-#    - name: Upload NuGet artifact
-#      uses: actions/upload-artifact@v3.0.0
-
+    - name: Upload NuGet artifact
+      uses: actions/upload-artifact@v3.0.0
+        with:
+          path: **\DansWpfComponents*nupkg
 
 
 #  PublishNuGetToPrivateFeed:
