--- a/.github/workflows/PublishNuGet.yml
+++ b/.github/workflows/PublishNuGet.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Upload NuGet artifact
       uses: actions/upload-artifact@v3.0.0
       with:
-        path: \**\DansWpfComponents*nupkg
+        path: DansWpfComponents\DansWpfComponents\**\DansWpfComponents*nupkg
         if-no-files-found: error
 
 
