Another commit to see if I can get the latest version an easier way

--- a/.github/workflows/MainUpdated.yml
+++ b/.github/workflows/MainUpdated.yml
@@ -13,6 +13,17 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    - name: Get Latest Release
+      uses: cardinalby/git-get-release-action@1.2.2
+      with:
+        latest: true
+
+    - name: Generate Version
+      shell: pwsh
+      env:
+        LATEST: ${{ steps.getByTag.outputs.tag_name }}
+      run: echo "Version $LATEST"
+
     - name: Generate Version
       shell: pwsh
       run: .github\utility\GetLatestVersion.ps1 -append '-ci-$(GITHUB_RUN_ATTEMPT)' -buildId '$(GITHUB_RUN_NUMBER)'
