--- a/.github/workflows/MainUpdated.yml
+++ b/.github/workflows/MainUpdated.yml
@@ -15,6 +15,8 @@ jobs:
 
     - name: Get Latest Release
       uses: cardinalby/git-get-release-action@1.2.2
+      env:
+        GITHUB_TOKEN: ${{ github.token }}
       with:
         latest: true
 
