--- a/.github/workflows/MainUpdated.yml
+++ b/.github/workflows/MainUpdated.yml
@@ -14,16 +14,15 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Get Latest Release
-      uses: cardinalby/git-get-release-action@1.2.2
+      uses: jossef/action-latest-release-info@v1.2.0
       env:
         GITHUB_TOKEN: ${{ github.token }}
-      with:
-        latest: true
+
 
     - name: Generate Version
       shell: pwsh
       env:
-        LATEST: ${{ steps.getByTag.outputs.tag_name }}
+        LATEST: ${{ steps.latest_release_info.outputs.tag_name }}
       run: echo "Version $LATEST"
 
     - name: Generate Version
