--- a/.github/workflows/MainUpdated.yml
+++ b/.github/workflows/MainUpdated.yml
@@ -14,10 +14,12 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Get Latest Release
-      uses: jossef/action-latest-release-info@v1.2.0
+      uses: joutvhu/get-release@v1.0.1
+      with:
+        latest: true
+        prerelease: true
       env:
-        GITHUB_TOKEN: ${{ github.token }}
-
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Generate Version
       shell: pwsh
