--- a/.github/workflows/MainUpdated.yml
+++ b/.github/workflows/MainUpdated.yml
@@ -14,12 +14,11 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Get Latest Release
-      uses: joutvhu/get-release@v1.0.1
+      id: latest_release
+      uses: pozetroninc/github-action-get-latest-release@v0.5.0
       with:
-        latest: true
-        prerelease: true
-      env:
-        GITHUB_TOKEN: ${{ github.token }}
+        repository: ${{ github.repository }}
+        excludes: draft
 
     - name: Generat
       shell: pwsh
@@ -31,7 +30,7 @@ jobs:
 
     - name: Generate Version
       shell: pwsh
-      run: echo "Version ${{ steps.get_current_release.outputs.tag_name }}"
+      run: echo "Version ${{ steps.latest_release.outputs.release }}"
 
     - name: Generate Version
       shell: pwsh
