--- a/.github/workflows/MainUpdated.yml
+++ b/.github/workflows/MainUpdated.yml
@@ -36,7 +36,7 @@ jobs:
 
     - name: Generate Version
       shell: pwsh
-      run: .github\utility\GetLatestVersion.ps1 -append '-ci-${{ github.run_id }}' -buildId '${{ github.run_number }}'
+      run: .github\utility\MakeVersionNumber.ps1 -append '-ci-${{ github.run_id }}' -buildId '${{ github.run_number }}' -latest '${{ steps.latest_release.outputs.tag_name }}'
 
 #  BuildNuGet:
 #    name: Build NuGet
