--- a/.github/workflows/MainUpdated.yml
+++ b/.github/workflows/MainUpdated.yml
@@ -7,45 +7,9 @@ on:
     branches: [ main ]
 
 jobs:
-  BuildNuGet:
-    name: Build NuGet
-    runs-on: windows-latest
-    steps:
-    - uses: actions/checkout@v3
-
-    - name: Get Latest Release
-      id: latest_release
-      uses: joutvhu/get-release@v1.0.1
-      with:
-        latest: true
-        prerelease: true
-      env:
-        GITHUB_TOKEN: ${{ github.token }}
-
-    - name: Generate Version
-      id: make_version
-      shell: pwsh
-      run: .github\utility\MakeVersionNumber.ps1 -append '-ci-${{ github.run_id }}' -buildId '${{ github.run_number }}' -latest '${{ steps.latest_release.outputs.tag_name }}'
-
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v2
-      with:
-        dotnet-version: 6.0.x
-
-    - name: Build
-      run: dotnet build --configuration Release DansWpfComponents\DansWpfComponents\DansWpfComponents.csproj
-      env:
-        pipelinePackageVersion: ${{ steps.make_version.outputs.pipelinePackageVersion }}
-        pipelineAssemblyVersion: ${{ steps.make_version.outputs.pipelineAssemblyVersion }}
-
-    - name: Upload NuGet artifact
-      uses: actions/upload-artifact@v3.0.0
-      with:
-        name: NuGet Package Files
-        path: |
-          DansWpfComponents\DansWpfComponents\bin\Release\DansWpfComponents.*.nupkg
-          DansWpfComponents\DansWpfComponents\bin\Release\DansWpfComponents.*.snupkg
-        if-no-files-found: error
+  CallBuildNuGet:
+    name: Call Build NuGet
+    uses: .github\workflows\BuildNuGet.yml
 
 
 #  PublishNuGetToPrivateFeed:
