Forgot to add the dependancy on last job

--- a/.github/workflows/MainUpdated.yml
+++ b/.github/workflows/MainUpdated.yml
@@ -13,4 +13,5 @@ jobs:
 
   CallReleaseNuGetToPrivateFeed:
     name: Release NuGet To Private Feed
+    needs: CallBuildNuGet
     uses: ./.github/workflows/ReleaseNuGetToPrivateFeed.yml
