Attempt one to push to private feed

--- a/.github/workflows/MainUpdated.yml
+++ b/.github/workflows/MainUpdated.yml
@@ -8,8 +8,10 @@ on:
 
 jobs:
   CallBuildNuGet:
+    name: Call Build NuGet
     uses: ./.github/workflows/BuildNuGet.yml
 
   CallReleaseNuGetToPrivateFeed:
+    name: Call Release NuGet To Private Feed
     needs: CallBuildNuGet
     uses: ./.github/workflows/ReleaseNuGetToPrivateFeed.yml
