--- a/.github/workflows/ReleaseNuGetToPrivateFeed.yml
+++ b/.github/workflows/ReleaseNuGetToPrivateFeed.yml
@@ -18,8 +18,8 @@ jobs:
       with:
         dotnet-version: 6.0.x
 
-    - name: Authenticate NuGet
-      run: dotnet nuget add source --username DanJBower --password ${{ github.token }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/DanJBower/index.json"
+    - name: Add Package Feed
+      run: dotnet nuget add source --name github "https://nuget.pkg.github.com/DanJBower/index.json"
 
     - name: Release NuGet
-      run: dotnet nuget push *.nupkg --source "github"
+      run: dotnet nuget push *.nupkg --source "github" --api-key ${{ github.token }}
