--- a/.github/workflows/ReleaseNuGet.yml
+++ b/.github/workflows/ReleaseNuGet.yml
@@ -5,10 +5,78 @@ on:
     types: [published]
 
 jobs:
-  WillDoThisLater:
-    name: Will Do This Later
+  BuildNuGet:
+    name: Build NuGet
     runs-on: windows-latest
     steps:
-    - name: TODO
+    - uses: actions/checkout@v3
+
+    - name: Get Latest Release
+      id: latest_release
+      uses: joutvhu/get-release@v1.0.1
+      with:
+        latest: true
+        prerelease: true
+      env:
+        GITHUB_TOKEN: ${{ github.token }}
+
+    - name: Generate Version
+      id: make_version
       shell: pwsh
-      run: echo "Will come back to this"
+      run: .github\utility\SetPassedVersionNumber.ps1 -latest '${{ steps.latest_release.outputs.tag_name }}'
+
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v2
+      with:
+        dotnet-version: 6.0.x
+
+    - name: Build
+      run: dotnet build --configuration Release DansWpfComponents\DansWpfComponents\DansWpfComponents.csproj
+      env:
+        pipelinePackageVersion: ${{ steps.make_version.outputs.pipelinePackageVersion }}
+        pipelineAssemblyVersion: ${{ steps.make_version.outputs.pipelineAssemblyVersion }}
+
+    - name: Upload NuGet artifact
+      uses: actions/upload-artifact@v3.0.0
+      with:
+        name: NuGet Package Files
+        path: |
+          DansWpfComponents\DansWpfComponents\bin\Release\DansWpfComponents.*.nupkg
+          DansWpfComponents\DansWpfComponents\bin\Release\DansWpfComponents.*.snupkg
+        if-no-files-found: error
+
+#  ReleaseNuGetToPrivateFeed:
+#    name: Release NuGet To Private Feed
+#    needs: BuildNuGet
+#    runs-on: ubuntu-latest
+#    steps:
+#    - name: Download NuGet artifact
+#      uses: actions/download-artifact@v3.0.0
+#      with:
+#        name: NuGet Package Files
+
+#    - name: Setup .NET
+#      uses: actions/setup-dotnet@v2
+#      with:
+#        dotnet-version: 6.0.x
+
+#    - name: Release NuGet
+#      run: dotnet nuget push *.nupkg --source https://nuget.pkg.github.com/DanJBower/index.json --api-key ${{ github.token }}
+
+#  ReleaseNuGetToActualFeed:
+#    name: Release NuGet To Actual Feed
+#    needs: BuildNuGet
+#    runs-on: ubuntu-latest
+#    steps:
+#    - name: Download NuGet artifact
+#      uses: actions/download-artifact@v3.0.0
+#      with:
+#        name: NuGet Package Files
+
+#    - name: Setup .NET
+#      uses: actions/setup-dotnet@v2
+#      with:
+#        dotnet-version: 6.0.x
+
+#    - name: Release NuGet
+#      run: dotnet nuget push *.nupkg --source https://api.nuget.org/v3/index.json --api-key ${{ secrets.NUGET_API_KEY }}
