Added a thing so it doens't run the pipeline when DansWpfComponents doesn't change

--- a/.github/workflows/MainUpdated.yml
+++ b/.github/workflows/MainUpdated.yml
@@ -3,8 +3,12 @@ name: Main Branch Updated
 on:
   push:
     branches: [ main ]
+    paths:
+      - 'DansWpfComponents\DansWpfComponents\**'
   pull_request:
     branches: [ main ]
+    paths:
+      - 'DansWpfComponents\DansWpfComponents\**'
 
 jobs:
   BuildNuGet:
