Hopefully this correctly adds a file to the build

--- a/.github/workflows/ReleaseNuGet.yml
+++ b/.github/workflows/ReleaseNuGet.yml
@@ -80,3 +80,49 @@ jobs:
 
     - name: Release NuGet
       run: dotnet nuget push *.nupkg --source https://api.nuget.org/v3/index.json --api-key ${{ secrets.NUGET_API_KEY }}
+
+  PublishExe:
+    name: Publish Demo Executable
+    needs: BuildNuGet
+    runs-on: windows-latest
+    steps:
+    - uses: actions/checkout@v3
+
+    - name: Get Latest Release
+      id: latest_release
+      uses: joutvhu/get-release@v1.0.1
+      with:
+        latest: true
+        prerelease: true
+      env:
+        GITHUB_TOKEN: ${{ github.token }}
+
+    - name: Generate Version
+      id: make_version
+      shell: pwsh
+      run: .github\utility\SetPassedVersionNumber.ps1 -latest '${{ steps.latest_release.outputs.tag_name }}'
+
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v2
+      with:
+        dotnet-version: 6.0.x
+
+    - name: Make Demo Executable
+      run: dotnet publish /p:DebugType=None /p:DebugSymbols=false /p:PublishReadyToRun=true /p:PublishSingleFile=true /p:PublishReadyToRunShowWarnings=true /p:PublishTrimmed=false /p:IncludeNativeLibrariesForSelfExtract=true DansWpfComponents\DansWpfComponents.Demo\DansWpfComponents.Demo.csproj -o . -c release
+      env:
+        pipelinePackageVersion: ${{ steps.make_version.outputs.pipelinePackageVersion }}
+        pipelineAssemblyVersion: ${{ steps.make_version.outputs.pipelineAssemblyVersion }}
+
+    - name: Upload Demo Executable
+      uses: actions/upload-artifact@v3.0.0
+      with:
+        name: Demo
+        path: DansWpfComponents.Demo.exe
+        if-no-files-found: error
+
+    - name: Publish Demo Executable
+      uses: svenstaro/upload-release-action@2.2.1
+      with:
+        repo_token: ${{ github.token }}
+        file: DansWpfComponents.Demo.exe
+        tag: ${{ steps.latest_release.outputs.tag_name }}
