--- a/DansWpfComponents/DansWpfComponents.Demo/DansWpfComponents.Demo.csproj
+++ b/DansWpfComponents/DansWpfComponents.Demo/DansWpfComponents.Demo.csproj
@@ -11,6 +11,12 @@
 		<PublishTrimmed>false</PublishTrimmed>
 		<IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract>
 		<EmitCompilerGeneratedFiles Condition="'$(Configuration)' == 'Debug'">true</EmitCompilerGeneratedFiles>
+		<AssemblyVersion Condition=" '$(pipelineAssemblyVersion)' != '' ">$(pipelineAssemblyVersion)</AssemblyVersion>
+		<FileVersion Condition=" '$(pipelineAssemblyVersion)' != '' ">$(pipelineAssemblyVersion)</FileVersion>
+		<Version Condition=" '$(pipelinePackageVersion)' != '' ">$(pipelinePackageVersion)</Version>
+		<AssemblyVersion Condition=" '$(pipelineAssemblyVersion)' == '' ">1.0.0.0</AssemblyVersion>
+		<FileVersion Condition=" '$(pipelineAssemblyVersion)' == '' ">1.0.0.0</FileVersion>
+		<Version Condition=" '$(pipelinePackageVersion)' == '' ">1.0.0</Version>
 	</PropertyGroup>
 
 	<ItemGroup>
