--- a/DansWpfComponents/DansWpfComponents.Demo/DansWpfComponents.Demo.csproj
+++ b/DansWpfComponents/DansWpfComponents.Demo/DansWpfComponents.Demo.csproj
@@ -25,6 +25,8 @@
 
 	<ItemGroup>
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0-preview3" />
+		<PackageReference Include="DryIoc.Microsoft.DependencyInjection" Version="6.0.0" />
+		<PackageReference Include="Scrutor" Version="4.1.0" />
 	</ItemGroup>
 
 </Project>
