Added images to the blurred holder demo

--- a/DansWpfComponents/DansWpfComponents.Demo/DansWpfComponents.Demo.csproj
+++ b/DansWpfComponents/DansWpfComponents.Demo/DansWpfComponents.Demo.csproj
@@ -29,4 +29,22 @@
 		<PackageReference Include="Scrutor" Version="4.1.0" />
 	</ItemGroup>
 
+	<ItemGroup>
+		<Resource Include="Resources\DemoImage01.jpg">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Resource>
+		<Resource Include="Resources\DemoImage02.jpg">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Resource>
+		<Resource Include="Resources\DemoImage03.jpg">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Resource>
+		<Resource Include="Resources\DemoImage04.jpg">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Resource>
+		<Resource Include="Resources\DemoImage05.png">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Resource>
+	</ItemGroup>
+
 </Project>
